--- a/templates/index.html
+++ b/templates/index.html
@@ -1,15 +1,7 @@
-<!doctype html>
-<html lang="fr">
-<head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+<!-- On hérite du template de base -->
+{% extends "download.html" %}
 
-    <title>Pytube-downloader</title>
-</head>
-<body>
+<!-- On ajoute notre propre contenu -->
+{% block contenu %}
 
-
-
-</body>
-</html>
+{% endblock %}
