bouton envoyer lien

--- a/templates/download.html
+++ b/templates/download.html
@@ -6,10 +6,28 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <title>Pytube-downloader</title>
+    
+    <link rel="stylesheet" href="static/css/download.css">
+    <link rel="stylesheet" href="static/css/assets.css">
 </head>
 <body>
 
+    <div id="download_form">
+        <form>
+            <div id="download_link">
+                <div class="input_box">
+                    <input type="text" name="link" required>
+                    <label>Lien de la vidéo</label>
+                    <span></span>
+                </div>
+            </div>
 
+            <div>
+                <input type="submit" id="download_button" value="Convertir" />
+            </div>
+
+        </form>
+    </div>
 
 </body>
 </html>
