--- a/templates/download.html
+++ b/templates/download.html
@@ -13,7 +13,7 @@
 <body>
 
     <div id="download_form">
-        <form>
+        <form action="/convert">
             <div id="download_link">
                 <div class="input_box">
                     <input type="text" name="link" required>
