--- a/static/css/assets.css
+++ b/static/css/assets.css
@@ -19,7 +19,7 @@
     border: none;
     box-shadow: none;
     font-size: 16px;
-    color: #000;
+    color: #FFF;
     width: 100%;
     outline: none;
 }
