Ajout du block contenu download.html

--- a/templates/download.html
+++ b/templates/download.html
@@ -39,6 +39,9 @@
         
     </div>
     
+    <!--Block containing others files code-->
+    {% block contenu %}
+    {% endblock%}
 
 </body>
 </html>
