--- a/templates/download.html
+++ b/templates/download.html
@@ -31,36 +31,15 @@
     </div>
 
 
-    <div id="convert">
-        
-        <h2 id="video_title">Titre de la vidéo</h2>
-        
-        
-        <img src="{{ url_for('static', filename='assets/thumbnail_unavailable.png') }}" alt="video">
-        
-        <table cellspacing="0">
-            <thead>
-                <td>Qualité</td>
-                <td>FPS</td>
-                <td>Format</td>
-                <td>Taille</td>
-                <td></td>
-            </thead>
-            <tbody>
-                <tr>
-                    <td>720p</td>
-                    <td>30</td>
-                    <td>mp4</td>
-                    <td>1.5 Mo</td>
-                    <td><input type="submit" value="⬇ Télécharger" /></td>
-                </tr>
-            </tbody>
-        </table>
-    </div>
+    {% if datas %}
+        {% extends "other_templates/all_videos.html" %}
+    {% endif %}
+
+
     
     <!--Block containing others files code-->
     {% block contenu %}
-    {% endblock%}
+    {% endblock %}
 
 </body>
 </html>
